made some small updates to html and css

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
     <main id="mainContent">
         <section class="aboutUs clearfix" id="about">
-            <div class="half image first">
+            <div class="half first">
                 <img src="assets/cyclistFoot.png" alt="a cyclist's foot on a pedal">
             </div>
             <div class="half text first">
@@ -69,7 +69,7 @@
             </div>
         </section>
         <section class="ourMission clearfix">
-            <div class="half image">
+            <div class="half">
                 <img src="assets/fancyBlackBike.png" alt="a fancy black bike">
             </div>
             <div class="half text">
@@ -91,19 +91,19 @@
         <section class="links">
             <div class="wrapper">
                 <div class="linksContainer clearfix">
-                    <div class="linkIcons">
+                    <div class="linkIcon">
                         <i class="fas fa-bicycle"></i>
                         <a href="">
                             <h3>Products</h3>
                         </a>
                     </div>
-                    <div class="linkIcons">
+                    <div class="linkIcon">
                         <i class="fas fa-users"></i>
                         <a href="">
                             <h3>Community</h3>
                         </a>
                     </div>
-                    <div class="linkIcons">
+                    <div class="linkIcon">
                         <i class="fas fa-phone"></i>
                         <a href="">
                             <h3>Reach out</h3>
